# provider_kill_mission

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-arm64  Dockerfile-x86-64  LICENCE  README.md  package.xml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-develop.yml  docker-image-feature.yml  docker-image-master.yml  docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-master.yml  docker-image-robot-develop.yml  docker-image-robot-feature.yml  docker-image-robot-master.yml  dockerimage.yml
launch/: provider_kill_mission.launch
script/: sonia_entrypoint.sh
scripts/: provider_kill_mission  sonia_entrypoint.sh
src/provider_kill_mission/: main.cc  provider_kill_mission.py  provider_kill_mission_file.py  provider_kill_mission_node.cc  provider_kill_mission_node.h
srv/: SetMissionSwitch.srv
