<?xml version="1.0"?>
<package>
  <name>provider_kill_mission</name>
  <version>1.0.3</version>
  <description>The provider_kill_mission package</description>

  <maintainer email="club.sonia@etsmtl.net">Club SONIA</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>interface_rs485</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>interface_rs485</run_depend>

</package>
