<?xml version="1.0"?>
<package>
  <name>provider_kill_mission</name>
  <version>1.0.9</version>
  <description>The provider_kill_mission package</description>

  <maintainer email="club.sonia@etsmtl.net">Club SONIA</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sonia_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sonia_msgs</run_depend>

</package>
